--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('ara', 'c', 'cpp',
+project('ara', 'cpp',
     default_options : ['warning_level=3',
                        'cpp_std=c++17',
                        'buildtype=debugoptimized'])
