Zephyr: build app_kernel with CONFIG_MEM_POOL_HEAP_BACKEND=n to disable detection of heap objects on K_MEM_POOL_DEFINE()

--- a/appl/Zephyr/app_kernel/prj.conf
+++ b/appl/Zephyr/app_kernel/prj.conf
@@ -15,3 +15,5 @@ CONFIG_HW_STACK_PROTECTION=n
 
 CONFIG_NO_OPTIMIZATIONS=y
 
+# ARA: Disable detection of heap objects on K_MEM_POOL_DEFINE()
+CONFIG_MEM_POOL_HEAP_BACKEND=n
