--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,4 +6,4 @@ build-sra:
     - soso
   script:
     - echo "Build ARA"
-    - meson build-gcc --native-file native.txt
+    - meson build-gcc --native-file native-lab.txt
