test: restructure meson suites
steps -> makes no sense (nearly everything in ARA is a step)
         put it in a suite analysis
preproc -> new category for preprocessing
sia, sse, multisse -> clear categories for the main analyses

--- a/test/meson.build
+++ b/test/meson.build
@@ -4,14 +4,14 @@ if get_option('enable_step_tests')
         args: [files('abb.py'), files('abb.json'), freertos_abb_merge],
         env: [python_path],
         depends: ara_py,
-        suite: 'steps'
+        suite: ['analysis', 'preproc']
     )
 
     test('dependency-resolving',
         py3_inst,
         args: files('dependency_resolving.py'),
         env: [python_path],
-        suite: 'steps'
+        suite: ['analysis', 'preproc']
     )
 
     test('dummy-test',
@@ -19,7 +19,7 @@ if get_option('enable_step_tests')
         args: [ara_py, 'empty',
                '-v',
                '--step-settings', files('dummy_settings.json')],
-        suite: 'steps'
+        suite: ['analysis', 'preproc']
     )
 
     test('function-pointer',
@@ -27,7 +27,7 @@ if get_option('enable_step_tests')
         args: [files('function_pointer.py'), files('function_pointer.json'), freertos_function_pointer],
         env: [python_path],
         depends: ara_py,
-        suite: 'steps'
+        suite: ['analysis', 'preproc']
     )
 
     test('icfg',
@@ -35,7 +35,7 @@ if get_option('enable_step_tests')
         args: [files('icfg.py'), files('icfg.json'), freertos_icfg],
         env: [python_path],
         depends: ara_py,
-        suite: 'steps'
+        suite: ['analysis', 'preproc']
     )
 
     test('instances',
@@ -43,7 +43,7 @@ if get_option('enable_step_tests')
         args: [files('instances.py'), files('instances.json'), freertos_instances],
         env: [python_path],
         depends: ara_py,
-        suite: 'steps'
+        suite: ['analysis', 'sia']
     )
 
     test('interactions',
@@ -51,7 +51,7 @@ if get_option('enable_step_tests')
         args: [files('interactions.py'), files('interactions.json'), freertos_interaction],
         env: [python_path],
         depends: ara_py,
-        suite: 'steps'
+        suite: ['analysis', 'sia']
     )
 
     test('instance_graph_stats',
@@ -59,7 +59,7 @@ if get_option('enable_step_tests')
         args: [files('instance_graph_stats.py'), files('instance_graph_stats.json'), freertos_interaction],
         env: [python_path],
         depends: ara_py,
-        suite: 'steps'
+        suite: ['analysis', 'sia']
     )
 
     test('ir-reader',
@@ -67,7 +67,7 @@ if get_option('enable_step_tests')
         args: [files('ir_reader.py'), files('empty.json'), gpslogger_application],
         env: [python_path],
         depends: ara_py,
-        suite: 'steps'
+        suite: ['analysis', 'preproc']
     )
     test('ir-reader-false-syntax',
         py3_inst,
@@ -75,7 +75,7 @@ if get_option('enable_step_tests')
         should_fail: true,
         env: [python_path],
         depends: ara_py,
-        suite: 'steps'
+        suite: ['analysis', 'preproc']
     )
     test('ir-reader-multiple-symbols',
         py3_inst,
@@ -83,9 +83,8 @@ if get_option('enable_step_tests')
         should_fail: true,
         env: [python_path],
         depends: ara_py,
-        suite: 'steps'
+        suite: ['analysis', 'preproc']
     )
-
 
     lock_files = {
                    'autosar_multicore_locks_a': files('locks_a.json'),
@@ -107,7 +106,7 @@ if get_option('enable_step_tests')
           args: [files('lock_elision.py'), locks, app['ll'], app['oil']],
           env: [python_path],
           depends: ara_py,
-          suite: ['steps', 'lock_elision']
+          suite: ['analysis', 'multisse', 'lock_elision']
       )
       if app.has_key('sys_timings')
         test('lock_elision_with_timings_' + app['full_name'],
@@ -115,7 +114,7 @@ if get_option('enable_step_tests')
              args: [files('timed_lock_elision.py'), locks, app['ll'], app['oil'], app['sys_timings']],
              env: [python_path],
              depends: ara_py,
-             suite: ['steps', 'lock_elision', 'timed_lock_elision']
+             suite: ['analysis', 'multisse', 'lock_elision', 'timings']
             )
       endif
 
@@ -130,7 +129,7 @@ if get_option('enable_step_tests')
           args: [files('multisse.py'), app['sys_test'], app['ll'], app['oil']],
           env: [python_path],
           depends: ara_py,
-          suite: ['steps', 'multisse']
+          suite: ['analysis', 'multisse']
       )
     endforeach
 
@@ -143,7 +142,7 @@ if get_option('enable_step_tests')
           args: [files('multisse.py'), app['time_test'], app['ll'], app['oil'], app['sys_timings']],
           env: [python_path],
           depends: ara_py,
-          suite: ['steps', 'multisse', 'multisse-timings']
+          suite: ['analysis', 'multisse', 'timings']
       )
     endforeach
 
@@ -152,14 +151,14 @@ if get_option('enable_step_tests')
         py3_inst,
         args: files('multiple_configured_steps.py'),
         env: [python_path],
-        suite: 'steps'
+        suite: ['analysis', 'preproc']
     )
 
     test('recursive',
         py3_inst,
         args: [files('recursive.py'), files('recursive.json'), freertos_icfg],
         env: [python_path],
-        suite: 'steps'
+        suite: ['analysis', 'preproc']
     )
 
     test('src-loc',
@@ -167,7 +166,7 @@ if get_option('enable_step_tests')
         args: [files('src_loc.py'), files('src_loc.json'), freertos_src_loc],
         env: [python_path],
         depends: ara_py,
-        suite: 'steps'
+        suite: ['analysis', 'preproc']
     )
 
     foreach elem : autosar_targets
@@ -180,7 +179,7 @@ if get_option('enable_step_tests')
           args: [files('sse.py'), elem['sys_test'], elem['ll'], elem['oil']],
           env: [python_path],
           depends: ara_py,
-          suite: ['steps', 'sse']
+          suite: ['analysis', 'sse']
       )
     endforeach
 
@@ -188,7 +187,7 @@ if get_option('enable_step_tests')
         py3_inst,
         args: [files('syscall.py'), files('syscall.json'), freertos_syscall],
         env: [python_path],
-        suite: 'steps'
+        suite: ['analysis', 'preproc']
     )
 
     test('value-analysis',
@@ -196,7 +195,7 @@ if get_option('enable_step_tests')
         args: [files('value_analysis.py'), files('value_analysis.json'), freertos_svf],
         env: [python_path],
         depends: ara_py,
-        suite: 'steps'
+        suite: ['analysis', 'preproc']
     )
 
     test('value-analysis-struct',
@@ -204,7 +203,7 @@ if get_option('enable_step_tests')
         args: [files('value_analysis.py'), files('value_analysis_struct.json'), freertos_value_analysis_struct],
         env: [python_path],
         depends: ara_py,
-        suite: 'steps'
+        suite: ['analysis', 'preproc']
     )
 
     subdir('native_step_test')
