test: do not mix SSE and MultiSSE tests

--- a/test/meson.build
+++ b/test/meson.build
@@ -121,7 +121,7 @@ if get_option('enable_step_tests')
     endforeach
 
     foreach app: autosar_targets
-      if not app.has_key('mtrace')
+      if app['core'] != 'multicore' or not app.has_key('mtrace')
         continue
       endif
       test('multisse_' + app['full_name'],
