--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,7 @@ test-preproc:
     TEST_BUILD: '$PERSISTENT_DIR/build-preproc-tests'
   script:
     - echo "Make a copy of the build directory (from $WRAP_BUILD to $TEST_BUILD)"
-    - cp -a $WRAP_BUILD $TEST_BUILD
+    - cp -a $WRAP_BUILD/. $TEST_BUILD
     - echo "Run tests"
     - eval $BWRAP --bind $TEST_BUILD $C_BUILD -- meson test -C $C_BUILD --suite ara-link
     - eval $BWRAP --bind $TEST_BUILD $C_BUILD -- meson test -C $C_BUILD --suite preproc
@@ -99,7 +99,7 @@ test-sia:
     TEST_BUILD: '$PERSISTENT_DIR/build-sia-tests'
   script:
     - echo "Make a copy of the build directory (from $WRAP_BUILD to $TEST_BUILD)"
-    - cp -a $WRAP_BUILD $TEST_BUILD
+    - cp -a $WRAP_BUILD/. $TEST_BUILD
     - echo "Run tests"
     - eval $BWRAP --bind $TEST_BUILD $C_BUILD -- meson test -C $C_BUILD --suite sia
 
@@ -113,7 +113,7 @@ test-sse:
     TEST_BUILD: '$PERSISTENT_DIR/build-sse-tests'
   script:
     - echo "Make a copy of the build directory (from $WRAP_BUILD to $TEST_BUILD)"
-    - cp -a $WRAP_BUILD $TEST_BUILD
+    - cp -a $WRAP_BUILD/. $TEST_BUILD
     - echo "Run tests"
     - eval $BWRAP --bind $TEST_BUILD $C_BUILD -- meson test -C $C_BUILD --suite sse
 
