meson: fix shared module linking
Python binary modules are shared modules. However, linking them together
is not supported. Therefore, they need to be loaded one after another in
the Python interpreter so it can resolve the symbols from the second
module also with the one from the first. This is achieved with an extra
flag to dlopen (the mechanism behind Python module loading).

To proper link the module, we also have to tell the linker to allow
undefined symbols.

--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -15,7 +15,6 @@ log_bridge_incl = include_directories('.')
 
 log_dep = declare_dependency(
   include_directories: log_bridge_incl,
-  link_with: log_bridge,
   sources: py_logging_header)
 
 # steps
@@ -82,6 +81,7 @@ step_mod = py3_inst.extension_module('step',
         'svf_analyses.cpp',
         'svf_transformation.cpp',
         'value_analyzer.cpp') + test_sources,
+  override_options: 'b_lundef=false',
   cpp_pch: 'pch/steps_pch.h',
   dependencies: [log_dep, py3_inst.dependency(), llvm_dep, graph_tool_dep, graph_dep, common_dep, pyllco_dep, svf_dep, cudd_dep]
 )
