CI: be more verbose

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,8 +86,8 @@ test-preproc:
     - echo "Make a copy of the build directory (from $WRAP_BUILD to $TEST_BUILD)"
     - cp -a $WRAP_BUILD/. $TEST_BUILD
     - echo "Run tests"
-    - eval $BWRAP --bind $TEST_BUILD $C_BUILD -- meson test -C $C_BUILD --suite ara-link
-    - eval $BWRAP --bind $TEST_BUILD $C_BUILD -- meson test -C $C_BUILD --suite preproc
+    - eval $BWRAP --bind $TEST_BUILD $C_BUILD -- meson test -C $C_BUILD -v --suite ara-link
+    - eval $BWRAP --bind $TEST_BUILD $C_BUILD -- meson test -C $C_BUILD -v --suite preproc
 
 test-sia:
   stage: test
