meson: fix dependencies

--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -13,6 +13,8 @@ log_bridge = py3_inst.extension_module('py_logging',
 
 log_bridge_incl = include_directories('.')
 
+# Attention: When using this dependency, you must also
+# somehow trigger the compilation of log_bridge.
 log_dep = declare_dependency(
   include_directories: log_bridge_incl,
   sources: py_logging_header)
@@ -83,6 +85,7 @@ step_mod = py3_inst.extension_module('step',
         'value_analyzer.cpp') + test_sources,
   override_options: 'b_lundef=false',
   cpp_pch: 'pch/steps_pch.h',
+  link_depends: [log_bridge, graph_data_mod],
   dependencies: [log_dep, py3_inst.dependency(), llvm_dep, graph_tool_dep, graph_dep, common_dep, pyllco_dep, svf_dep, cudd_dep]
 )
 
