meson: fix symbol loading between shared modules
Since Meson 0.63.0, Meson set visibility=hidden on Python modules by
default. This prevent public Cython functions from being visible for
other Cython modules. We need exactly that so change to back to the old
behavior.

--- a/ara/graph/cgraph/meson.build
+++ b/ara/graph/cgraph/meson.build
@@ -19,7 +19,7 @@ graph_data_mod = py3_inst.extension_module('graph_data',
   'callpath.cpp',
   'mix.cpp',
   'os.cpp',
-  link_args: '-rdynamic',
+  gnu_symbol_visibility: 'default',
   override_options: 'b_lundef=false',
   dependencies: [py3_inst.dependency(), llvm_dep, boost_dep, graph_tool_dep, common_dep, pyllco_dep, svf_dep]
 )
