visualization: apply fix for dlopen() library import on gui.py

--- a/meson.build
+++ b/meson.build
@@ -141,6 +141,7 @@ gui_py_content = '''#!@0@
 """Automatic Real-time System Analyzer GUI"""
 import importlib
 import sys
+import os
 import graph_tool
 
 def load(what, where):
@@ -148,6 +149,9 @@ def load(what, where):
     sys.modules[where] = module
 
 sys.path = [@1@] + sys.path
+sys.setdlopenflags(sys.getdlopenflags() | os.RTLD_GLOBAL)
+
+import pyllco
 
 load("graph_data", "ara.graph.graph_data")
 load("py_logging", "ara.steps.py_logging")
