meson: check for at least Python 3.9

--- a/meson.build
+++ b/meson.build
@@ -20,6 +20,9 @@ cython_flags = ['-Wextra', '--cplus', '-3']
 py3_mod = import('python')
 # TODO add version argument to find_installation: see https://github.com/mesonbuild/meson/issues/7078
 py3_inst = py3_mod.find_installation('python3', modules: ['pydot', 'graph_tool', 'scipy'])
+if py3_inst.language_version().version_compare('<3.9')
+    error('At least Python 3.10 is required.')
+endif
 
 ## llvm dependencies
 llvm_version = ['>=10', '<13']
